<resources>
    <string name="app_name">Mundo mágico</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_lectura">Lectura</string>
    <string name="menu_numeros">Números</string>
    <string name="menu_colores">Colores</string>
    <string name="menu_matematicas">Matemáticas</string>
    <string name="menu_letras">letras</string>
    <string name="menu_formas">Formas</string>
</resources>